argo-application/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-argo-train-app
spec:
  selector:
    app: argo-train-app
  ports: 
    - protocol: TCP
      port: 5000
      targetPort: 5000
